--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.2",
+    "ical-generator": "^3.6.1",
     "jsonwebtoken": "^9.0.0"
   }
 }
